<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#EADDFF"
    app:cardCornerRadius="12dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:strokeWidth="0dp">

    <!--
        In the above cardview widget
        cardelevation property will give elevation to your card view
        card corner radius will provide radius to your card view
        card background color will give background color to your card view
        card max elevation will give the cardview maximum elevation
        card prevent corner overlap will add padding to CardView on v20 and
        before to prevent intersections between the Card content and rounded corners.
        card use compact padding will add padding in API v21+ as well to have the same
        measurements with previous versions.
    -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/itemImageCard"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <!--ImageVIew to display our Course Image-->
            <ImageView
                android:id="@+id/itemImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/itembg" />
        </androidx.cardview.widget.CardView>
        <!--Text View to display Course Name-->

        <!--Text VIew to display COurse Rating-->
        <!--Image used in present in drawable folder-->

        <TextView
            android:id="@+id/newsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autoSizeTextType="none"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/news_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#21005E"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/itemImageCard"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newsAuthor" />

        <TextView
            android:id="@+id/newsAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:drawablePadding="2dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/news_author"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#21005E"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/newsTitle"
            app:layout_constraintEnd_toStartOf="@+id/itemImageCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/publishedTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="2dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/published_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#21005E"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newsTitle"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>