<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFBFE"
    android:theme="@style/Theme.Material3.Light.NoActionBar"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/insertCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        app:cardBackgroundColor="#FFFBFE"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/covid19Card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="2dp">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/countryInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:backgroundTint="#00BA68C8"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/country_name_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:pointerIcon="arrow"
            android:textAlignment="viewStart"
            android:textColorHighlight="#79747E"
            android:textColorHint="#49454F"
            android:textSize="20sp">

        </com.google.android.material.textfield.MaterialAutoCompleteTextView>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/covid19Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:minHeight="128dp"
        app:cardBackgroundColor="#EADDFF"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/getLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insertCountry"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/CountryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="#21005E"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/CovidCases"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/CovidCases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="#21005E"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CountryName" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:minHeight="48dp"
        android:onClick="getLocation"
        android:text="@string/my_location"
        android:theme="@style/ThemeOverlay.Material3.Button"
        app:icon="@android:drawable/ic_menu_mylocation"
        app:layout_constraintBottom_toTopOf="@+id/savedNewsView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/covid19Card" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/showFullView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minHeight="48dp"
        android:onClick="changeToFullView"
        android:text="@string/full_view"
        android:theme="@style/ThemeOverlay.Material3.Button"
        app:icon="@android:drawable/ic_menu_view"
        app:layout_constraintBottom_toBottomOf="@+id/getLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/getLocation"
        app:layout_constraintTop_toTopOf="@+id/getLocation" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/savedNewsView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getLocation"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/news_item" />

</androidx.constraintlayout.widget.ConstraintLayout>